Fix usercompany data

--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -60,7 +60,7 @@
                     </a>
                 </div>
                 <div class="headerOptionLogin f aic jcfe">
-                    <h3 class="headerNameUser">Hola {{logged_user.names}}</h3>
+                    <h3 class="headerNameUser">Hola {{company_user.names}}</h3>
                     <div class="headerMenu pr f aic jcc" style="display: flex;">
                         <a class="headerIconMenu icon-menu"></a>
                         <div class="headerMenuList pa t100">
