--- a/src/templates/admin/dashboard.html
+++ b/src/templates/admin/dashboard.html
@@ -110,12 +110,12 @@
                                                 <tr>
                                                     <td>
                                                         <div class="d-flex align-items-center">
-                                                            <span class="font-weight-bolder mb-25">{{c.user.full_name}}</span>
+                                                            <span class="font-weight-bolder mb-25">{{c.full_name}}</span>
                                                         </div>
                                                     </td>
                                                     <td class="text-nowrap">
                                                         <div class="d-flex flex-column">
-                                                            <span class="font-weight-bolder mb-25">{{c.user.modified}}</span>
+                                                            <span class="font-weight-bolder mb-25">{{c.modified}}</span>
                                                         </div>
                                                     </td>
                                                     <td class="text-nowrap">
