--- a/src/templates/landing/networking-si-continuar.html
+++ b/src/templates/landing/networking-si-continuar.html
@@ -116,7 +116,7 @@
         window.location.href = url.toString();
     });
      $('#searchInput').keydown(function(event) {
-        if (event.key === 'Enter') {
+        if (event.keyCode === 13) {
             event.preventDefault();
             const query = $('#searchInput').val();
             let url = new URL(window.location.origin + "{% url 'landing:networking' %}");
