--- a/src/templates/landing/networking.html
+++ b/src/templates/landing/networking.html
@@ -12,9 +12,9 @@
         <div class="b11LeftContent">
             <a href="##" onClick="history.go(-1); return false;" class="gReturn">Regresar</a>
             <h1 class="gTitle">Networking</h1>
-            {% comment %} <div class="gParrafo">
+             <div class="gParrafo">
                 <p>{{home_page.main_title|default:""}}</p>
-            </div> {% endcomment %}
+            </div>
         </div>
     </div>
     <div class="b11Right scrollItem">
