Added close register message

--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -122,6 +122,7 @@
 
 <div class="g8PopupForm formRegistro pr">
     <a href="#" class="g8ClosePopup icon-close pa closeRegistro"></a>
+    {% if allow_register %}
     <h3>{{header_section.register_form_title}}</h3>
     <div class="g8Form warning-form" style="display:none;">
         <div class="gParrafo message-warning">
@@ -303,4 +304,10 @@
 			</div>
         </form>
     </div>
+    {% else %}
+    <h3>{{company.title_closed_in_person_register}}</h3>
+    <div class="gParrafo parrafo-register">
+        {{company.message_closed_in_person_register|safe}}
+    </div>
+    {% endif %}
 </div>
