--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -557,7 +557,10 @@
     function getReCaptcha(){
         grecaptcha.ready(function() {
             grecaptcha.execute('{{recaptcha_site_key}}', {action: "/"}).then(function(token) {
-                document.getElementById('g-recaptcha-response').value = token;
+                let captcha_register = document.getElementById('g-recaptcha-response')
+                if(captcha_register){
+                    document.getElementById('g-recaptcha-response').value = token;
+                }
                 document.getElementById('g-recaptcha-response_login').value = token;
             });
         });
